--- a/TFG_Projects_APP_Frontend/AppShell.xaml
+++ b/TFG_Projects_APP_Frontend/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:TFG_Projects_APP_Frontend"
+    xmlns:pages="clr-namespace:TFG_Projects_APP_Frontend.Pages"
     Shell.FlyoutBehavior="Flyout"
     Title="TFG_Projects_APP_Frontend">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
