Services fixed. Pages and PageModels created but not completely implemented.

--- a/TFG_Projects_APP_Frontend/AppShell.xaml
+++ b/TFG_Projects_APP_Frontend/AppShell.xaml
@@ -6,7 +6,7 @@
     xmlns:local="clr-namespace:TFG_Projects_APP_Frontend"
     xmlns:pages="clr-namespace:TFG_Projects_APP_Frontend.Pages"
     Shell.FlyoutBehavior="Flyout"
-    Title="TFG_Projects_APP_Frontend">
+    Title="Project Design APP">
 
     <ShellContent
         Title="Home"
