--- a/TFG_Projects_APP_Frontend/Pages/MainPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/MainPage.xaml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TFG_Projects_APP_Frontend.Pages.MainPage">
+             xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
+             xmlns:dtos="clr-namespace:TFG_Projects_APP_Frontend.Entities.Dtos.Users"
+             xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
+             x:Class="TFG_Projects_APP_Frontend.Pages.MainPage"
+             x:DataType="pageModels:MainPageModel">
 
     <ScrollView>
         <VerticalStackLayout
