--- a/TFG_Projects_APP_Frontend/Pages/MainPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/MainPage.xaml
@@ -11,9 +11,24 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <ListView ItemsSource="{Binding Projects}">
-                
-            </ListView>
+            <CollectionView ItemsSource="{Binding Projects}" 
+                            SelectedItem="{Binding SelectedProject}"
+                            SelectionChangedCommand="{Binding ProjectSelectedCommand}"
+                            SelectionMode="Single">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Project">
+                        <Border Padding="5">
+                            <StackLayout Padding="10">
+                                <StackLayout Orientation="Horizontal" Spacing="8">
+                                    <Label Text="{Binding Id}" FontSize="16"/>
+                                    <Label Text="{Binding Title}" FontSize="16" />
+                                </StackLayout>
+                                <Label Text="{Binding Description}" FontSize="12" />
+                            </StackLayout>
+                        </Border>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </VerticalStackLayout>
     </ScrollView>
 
