Added a way to change the IP and port of the API. Fixed crashing issues in Task board and concept board page. Added both setting pages to the navigation.

--- a/TFG_Projects_APP_Frontend/AppShell.xaml
+++ b/TFG_Projects_APP_Frontend/AppShell.xaml
@@ -17,4 +17,14 @@
         Title="Home"
         ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
+
+    <ShellContent
+        Title="User Settings"
+        ContentTemplate="{DataTemplate pages:UserSettingsPage}"
+        Route="UserSettingsPage" />
+
+    <ShellContent
+        Title="App Settings"
+        ContentTemplate="{DataTemplate pages:AppSettingsPage}"
+        Route="AppSettingsPage" />
 </Shell>
